start of testbranch fixed grid-gap on .grid to 20px

--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@ html{
 }
 
 .grid{
-  text-transform: uppercase;
   display: grid; 
-  grid-gap: 16px;
+  grid-gap: 20px;
+  text-transform: uppercase;
   grid-template-columns: repeat(2, 1fr);
 }
 
